feat: detail data import partially done

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /.idea/workspace.xml
+/.idea/GameZone.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
